custom-routing/deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lib-v2
  labels: { app: lib, version: v2}
spec:
  replicas: 2
  selector:
    matchLabels: { app: lib, version: v2}
  template:
    metadata:
      labels: { app: lib, version: v2}
    spec:
      containers:
      - name: lib
        image: proksch/istio-example-lib:0.0.2
        ports:
        - containerPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-v2
  labels: { app: app, version: v2}
spec:
  replicas: 2
  selector:
    matchLabels: { app: app, version: v2}
  template:
    metadata:
      labels: { app: app, version: v2}
    spec:
      containers:
      - name: app
        image: proksch/istio-example-app:0.0.2
        ports:
        - containerPort: 8080
