custom-routing/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lib-v1
  labels: { app: lib, version: v1}
spec:
  replicas: 2
  selector:
    matchLabels: { app: lib, version: v1}
  template:
    metadata:
      labels: { app: lib, version: v1}
    spec:
      containers:
      - name: lib
        image: proksch/istio-example-lib:0.0.1
        ports:
        - containerPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-v1
  labels: { app: app, version: v1}
spec:
  replicas: 2
  selector:
    matchLabels: { app: app, version: v1}
  template:
    metadata:
      labels: { app: app, version: v1}
    spec:
      containers:
      - name: app
        image: proksch/istio-example-app:0.0.1
        ports:
        - containerPort: 8080
