custom-routing/lib-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lib
spec:
  selector:
    app: lib
  ports:
    - name: http
      port: 1234
      targetPort: 8080
