custom-routing/lib-destination.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: lib
spec:
  host: lib
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
