custom-routing/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-entry-service
spec:
  gateways:
    - my-gateway
  hosts:
  - "*"
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: app
        subset: v1
      weight: 90
    - destination:
        host: app
        subset: v2
      weight: 10

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: lib
spec:
  hosts:
  - lib
  http:
  - match:
    - sourceLabels:
        version: v2
    route:
    - destination:
        host: lib
        subset: v2
  - route:
    - destination:
        host: lib
        subset: v1
